Задача 4. Сумма чисел
В файле numbers.txt записаны целые числа, каждое с новой строки. Прочитай их, посчитай сумму и запиши результат в файл sum.txt.

Входной файл (numbers.txt)	Ожидаемый результат
5\n10\n15\n20	Файл sum.txt с содержимым: 50
-3\n7\n0\n12	Файл sum.txt с содержимым: 16
100\n-50\n25	Файл sum.txt с содержимым: 75